# WhaleCode

./: .env  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  DOCS.md  LICENSE  PRIVACY_POLICY.md  README.md  REVIEW_NOTES.md  agent-orchestrator.yaml  diff_codex.txt  diff_gemini.txt  eslint.config.js  need_to_be_fixed.md  package-lock.json  package.json  pnpm-lock.yaml  test_ws.js  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  STATE.md  completed-units.json  doctor-history.jsonl  gsd.db  metrics.json
.gsd/activity/: 001-research-slice-M002-S01.jsonl  002-plan-slice-M002-S01.jsonl  003-execute-task-M002-S01-T01.jsonl  (+30 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  answers.md
docs/: KNOWN_ISSUES.md  architecture.md  design-system.md  phase-1-spec.md  phase-2-spec.md  phase-3-spec-review.md  phase-3-spec.md  phase-4-crash-diagnostic.md  phase-4-spec.md  phase-4-verification.md  phase-5-qa-diagnostic.md  phase-5-spec.md  phase-5-verification.md  phase-6-spec.md  phase-6-toolparsing-diagnostic.md  phase-6-verification.md  phase-7-density-audit.md  phase-7-followup-diagnostic.md  phase-7-spec.md  phase-7-verification.md  phase-8-preview.md  roadmap.md  ux-flows.md
src/: App.tsx  bindings.ts  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  editor.rs  error.rs  gitignore.rs  lib.rs  main.rs  repo.rs  settings.rs  state.rs  utils.rs  worktree_actions.rs
src-tauri/src/adapters/: claude.rs  codex.rs  gemini.rs  mod.rs
src-tauri/src/agents/: claude.rs  codex.rs  gemini.rs  mod.rs  plan_parser.rs  process.rs  tool_event.rs
src-tauri/src/agents/prompts/: master_claude.md  master_codex.md  master_gemini.md  mod.rs  replan_claude.md  replan_codex.md  replan_gemini.md
src-tauri/src/agents/tests/: crash_shapes.rs  fake_agent.rs  followup_shapes.rs  mod.rs  parser_tests.rs  question_shapes.rs  tool_event_shapes.rs
src-tauri/src/agents/tests/fixtures/: fake_agent.sh
src-tauri/src/agents/tests/fixtures/question_fixtures/: fake_asks_question_then_exits.sh  fake_asks_question_then_waits.sh
src-tauri/src/agents/tests/followup_fixtures/: claude_followup.sh  claude_followup_fresh.sh  codex_followup.sh  codex_followup_fresh.sh  gemini_followup.sh  gemini_followup_fresh.sh
src-tauri/src/agents/tests/tool_event_fixtures/: claude_edge.sh  claude_happy.sh  codex_edge.sh  codex_happy.sh  gemini_edge.sh  gemini_happy.sh
src-tauri/src/commands/: claude.rs  cleanup.rs  codex.rs  config.rs  context.rs  detection.rs  fs_explorer.rs  gemini.rs  git.rs  mod.rs  orchestrator.rs  orchestrator_test.rs  process.rs  prompt.rs  router.rs  stdin.rs  worktree.rs
src-tauri/src/context/: injection.rs  migrations.rs  mod.rs  models.rs  queries.rs  store.rs
src-tauri/src/credentials/: codex_keychain.rs  gemini_keychain.rs  keychain.rs  mod.rs
src-tauri/src/detection/: credentials.rs  mod.rs  models.rs  scanner.rs  usage.rs
src-tauri/src/fs_explorer/: list.rs  mod.rs  models.rs  read.rs  write.rs
src-tauri/src/git/: diff.rs  log.rs  mod.rs  models.rs  operations.rs  status.rs
src-tauri/src/ipc/: commands.rs  events.rs  mod.rs
src-tauri/src/messenger/: mod.rs  models.rs
src-tauri/src/orchestration/: context.rs  dispatcher.rs  events.rs  lifecycle.rs  mod.rs  registry.rs  run.rs  tests.rs
src-tauri/src/orchestration/notes/: mod.rs  tests.rs
src-tauri/src/process/: manager.rs  mod.rs  signals.rs
src-tauri/src/prompt/: mod.rs  models.rs  templates.rs
src-tauri/src/router/: dag.rs  mod.rs  models.rs  orchestrator.rs  retry.rs
src-tauri/src/safety/: mod.rs
src-tauri/src/storage/: error.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/worktree/: conflict.rs  diff.rs  git.rs  manager.rs  mod.rs  models.rs  tests.rs
(+467 files in other folders)
